Wed Sep  6 17:44:04 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* <param> added to the test.dtd
	
	* mt_vector added as a message type separate from mt_record
	
Wed Sep 06 17:37:50 BST 2000 Olly Betts

	* Tom Mortimer gets a well deserved mention in the AUTHORS list for
	  bug reporting.

Wed Sep 06 16:32:01 BST 2000 Olly Betts

	* website now uses viewcvs - another TODO bites the dust.

Wed Sep  6 15:43:31 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Outputs other than "out" can be used for the output of the whole
	  network.

	* Added <param> tags to pass configuration info to nodes from the
	  XML description.  OmIndexerNode::get_config_string() actually
	  implemented, plus OmIndexerNode constructor now takes an
	  OmSettings.
	
	* OmIndexerNode methods set_output_{string,int,double,record} renamed
	  to overloaded set_output.
	
	* New Record constructor for initialising from a vector, along with
	  accessor functions get_vector_length() and operator[].  The
	  stream insertion operator uses these to recursively print out the
	  values.
	
Wed Sep 06 13:34:24 BST 2000 Olly Betts

	* Opening a termlist for a document which is not present now always
	  throws OmDocNotFoundError (da and db backends need checking)

 	* Updated TODO.

Wed Sep 06 11:31:00 BST 2000 Olly Betts

	* Fixed problems with distributing NEAR/PHRASE over subexpressions.
 
Wed Sep 06 09:28:04 BST 2000 Olly Betts

	* Added omtermlistiteratorinternal.h to list of files to distribute.

Tue Sep  5 18:36:43 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added a new setting "remote_timeout", used to configure the
	  timeout (in milliseconds) used before giving up on network
	  connections.  (The default is 10,000 milliseconds or 10 seconds)

	* Added new option --timeout to set the timeout on the tcp server
	  side.

Tue Sep 05 15:51:07 BST 2000 Olly Betts

	* Added some items to TODO.
